# chromsplit

./: Cargo.toml  README.md
src/: args.rs  fasta.rs  gene.rs  main.rs  process.rs  utils.rs
